fix: alignement

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -455,6 +455,10 @@ h2 {
   }
 }
 
+.w-20 {
+  width: 20px !important;
+}
+
 .element-box {
   width : 20px;
   height : 20px;
